# ark-engine

./: .gitignore  .gitmodules  CMakeLists.txt  EXPERIMENTAL_autobuild_linux.sh  MakeSolution.bat  README.md  auto.bat  autobuild_windows.bat  build_ubuntu.sh  build_vs15.bat  build_vs17.bat  build_windows.bat  conanfile.txt  copy_content_windows.bat  jeeves.bat  pre-build-script.bat  premake5.lua  t
Content/Levels/: placeholder.lua
Shaders/: BaseFragment.frag  BaseVertex.vert
Source/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  EngineConfig.h  Entity.cpp  Entity.h  GameObject.cpp  GameObject.h  LuaScript.cpp  LuaScript.h  LuaScript.hpp  Main.cpp  Model.cpp  Model.h  Player.cpp  Player.h  Shader.cpp  Shader.h  ShaderComponents.h  ShaderComponents.hpp  ShaderPointers.hpp  Texture.cpp  Texture.h  Texture.hpp  Tile.cpp  Tile.h  Utilities.hpp
content/: debug.json  engine.json  engine_config.lua  tile_config.lua
content/config/: engine_config.lua  key_bindings.lua
content/configs/: config.lua
content/entities/: player.json  test_mob.json
content/fonts/: arial.lua  digital-7.lua  font_arial.lua
content/interfaces/: debugging_interface.json  player_hud.json  test_interface.json
content/levels/: level_test.lua  test_level.json
content/scripts/: item_test.lua  player.lua
content/shaders/: background_effect.frag  background_textured_noise.frag  background_textured_noise_effect.frag  default.frag  default.vert  default_texture_array.frag  default_textured.frag  lighting2D_point_texture_array.frag  lighting2D_point_textured.frag  lighting_ambient.frag  lighting_diffuse.frag  lighting_directional.frag  lighting_directional_texture_array.frag  lighting_directional_textured.frag  lighting_phong.frag  lighting_point.frag  lighting_point_texture_array.frag  lighting_point_textured.frag  lighting_spotlight.frag  lighting_spotlight_texture_array.frag  lighting_spotlight_textured.frag  lighting_texture_array.frag  lighting_textured.frag  no_textures.frag  noise_effect.frag  renderable_text.frag  (+7 more)
content_json/: engine.json
src/: Animation.cpp  Animation.h  Background.cpp  Background.h  BoundingBox.cpp  BoundingBox.h  Camera.cpp  Camera.h  DataBinding.cpp  DataBinding.h  Debug.hpp  Engine.cpp  Engine.h  EngineConfig.h  Entity.cpp  Entity.h  Font.cpp  Font.h  GameController.cpp  GameController.h  GameObject.cpp  GameObject.h  Glyph.cpp  Glyph.h  Item.cpp  Item.h  JsonParser.hpp  Keybindings.cpp  Keybindings.h  Keyboard.cpp  Keyboard.h  Level.cpp  Level.h  LevelManager.cpp  LevelManager.h  LightSource.cpp  LightSource.h  LuaScript.cpp  LuaScript.h  Main.cpp  (+30 more)
(+27 files in other folders)
